--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-messages": "*",
     "express-session": "*",
     "express-validator": "*",
+    "google-auth-library": "^0.10.0",
     "googleapis": "^19.0.0",
     "mongodb": "*",
     "mongoose": "*",
